# multi-agent-analyst

./: .gitignore  README.md  analyst.toml  architecture.txt  pyproject.toml
src/analyst/: __init__.py  base_agent.py  cli.py  config.py  digest.py  event_emitter.py  models.py  orchestrator.py  query_agent.py  registry.py  state.py
src/analyst/agents/: __init__.py  cleaning.py  eda.py  excel_export.py  ingestion.py  profiling.py  query_execution.py  reporting.py  tableau_export.py  transformation.py  visualization.py
src/analyst/reasoning/: __init__.py  base_reasoning.py  consolidated.py  data_discovery.py  eda_reasoning.py  insight_report.py  problem_interpreter.py  query_generation.py  visualization_planning.py
src/analyst/webapp/: __init__.py  api.py  auth.py  pdf_export.py  sse.py
src/analyst/webapp/static/: _headers  app.js  auth.js  dashboard.html  index.html  keygen.html  login.html  register.html  style.css
tests/: conftest.py  test_cleaning.py  test_eda.py  test_excel.py  test_ingestion.py  test_orchestrator.py  test_profiling.py  test_query.py  test_reporting.py  test_tableau.py  test_visualization.py
